src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__field_init_shorthand.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 6,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 6,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 8,
                                                    end: 11,
                                                    start_line: 1,
                                                    start_col: 9,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 8,
                                        end: 11,
                                        start_line: 1,
                                        start_col: 9,
                                    },
                                },
                            ),
                            span: Span {
                                start: 8,
                                end: 11,
                                start_line: 1,
                                start_col: 9,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 11,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 4,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 13,
                                end: 14,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 16,
                                                    end: 19,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 16,
                                        end: 19,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                            ),
                            span: Span {
                                start: 16,
                                end: 19,
                                start_line: 1,
                                start_col: 17,
                            },
                        },
                        span: Span {
                            start: 13,
                            end: 19,
                            start_line: 1,
                            start_col: 14,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Record {
                                    path: Some(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 5,
                                                        },
                                                        span: Span {
                                                            start: 23,
                                                            end: 28,
                                                            start_line: 1,
                                                            start_col: 24,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 23,
                                                end: 28,
                                                start_line: 1,
                                                start_col: 24,
                                            },
                                        },
                                    ),
                                    fields: [
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 31,
                                                    end: 32,
                                                    start_line: 1,
                                                    start_col: 32,
                                                },
                                            },
                                            value: None,
                                            span: Span {
                                                start: 31,
                                                end: 32,
                                                start_line: 1,
                                                start_col: 32,
                                            },
                                        },
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 34,
                                                    end: 35,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                            value: None,
                                            span: Span {
                                                start: 34,
                                                end: 35,
                                                start_line: 1,
                                                start_col: 35,
                                            },
                                        },
                                    ],
                                    base: None,
                                },
                                span: Span {
                                    start: 23,
                                    end: 37,
                                    start_line: 1,
                                    start_col: 24,
                                },
                            },
                        ),
                        span: Span {
                            start: 21,
                            end: 39,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 39,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 39,
        start_line: 1,
        start_col: 1,
    },
}
