src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__float_exponent.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 14,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 13,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 14,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Float {
                                                    value: OrderedFloat(
                                                        15000000000.0,
                                                    ),
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 23,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 17,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 18,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 9,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                            Let {
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 3,
                                            },
                                            span: Span {
                                                start: 29,
                                                end: 30,
                                                start_line: 1,
                                                start_col: 30,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 29,
                                        end: 30,
                                        start_line: 1,
                                        start_col: 30,
                                    },
                                },
                                ty: None,
                                value: Some(
                                    Expr {
                                        kind: Literal(
                                            Literal {
                                                kind: Float {
                                                    value: OrderedFloat(
                                                        2e-5,
                                                    ),
                                                    suffix: None,
                                                },
                                                span: Span {
                                                    start: 33,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 34,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 33,
                                            end: 39,
                                            start_line: 1,
                                            start_col: 34,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 25,
                                    end: 40,
                                    start_line: 1,
                                    start_col: 26,
                                },
                            },
                        ],
                        expr: None,
                        span: Span {
                            start: 7,
                            end: 42,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 42,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 42,
        start_line: 1,
        start_col: 1,
    },
}
