src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__for_loop.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: For {
                                    label: None,
                                    pattern: Pattern {
                                        kind: Ident {
                                            by_ref: false,
                                            mutable: false,
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 13,
                                                    end: 14,
                                                    start_line: 1,
                                                    start_col: 14,
                                                },
                                            },
                                            subpattern: None,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 14,
                                            start_line: 1,
                                            start_col: 14,
                                        },
                                    },
                                    iter: Expr {
                                        kind: Range {
                                            start: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 0,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 18,
                                                                end: 19,
                                                                start_line: 1,
                                                                start_col: 19,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 18,
                                                        end: 19,
                                                        start_line: 1,
                                                        start_col: 19,
                                                    },
                                                },
                                            ),
                                            end: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 21,
                                                                end: 23,
                                                                start_line: 1,
                                                                start_col: 22,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 21,
                                                        end: 23,
                                                        start_line: 1,
                                                        start_col: 22,
                                                    },
                                                },
                                            ),
                                            inclusive: false,
                                        },
                                        span: Span {
                                            start: 18,
                                            end: 23,
                                            start_line: 1,
                                            start_col: 19,
                                        },
                                    },
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: Call {
                                                    callee: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 3,
                                                                            },
                                                                            span: Span {
                                                                                start: 26,
                                                                                end: 33,
                                                                                start_line: 1,
                                                                                start_col: 27,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 26,
                                                                    end: 33,
                                                                    start_line: 1,
                                                                    start_col: 27,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 26,
                                                            end: 33,
                                                            start_line: 1,
                                                            start_col: 27,
                                                        },
                                                    },
                                                    args: [
                                                        CallArg {
                                                            name: None,
                                                            value: Expr {
                                                                kind: Path(
                                                                    ExprPath {
                                                                        segments: [
                                                                            ExprPathSegment {
                                                                                name: Spanned {
                                                                                    node: SymbolU32 {
                                                                                        value: 2,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 34,
                                                                                        end: 35,
                                                                                        start_line: 1,
                                                                                        start_col: 35,
                                                                                    },
                                                                                },
                                                                                args: None,
                                                                            },
                                                                        ],
                                                                        span: Span {
                                                                            start: 34,
                                                                            end: 35,
                                                                            start_line: 1,
                                                                            start_col: 35,
                                                                        },
                                                                    },
                                                                ),
                                                                span: Span {
                                                                    start: 34,
                                                                    end: 35,
                                                                    start_line: 1,
                                                                    start_col: 35,
                                                                },
                                                            },
                                                            span: Span {
                                                                start: 34,
                                                                end: 35,
                                                                start_line: 1,
                                                                start_col: 35,
                                                            },
                                                        },
                                                    ],
                                                },
                                                span: Span {
                                                    start: 26,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 27,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 24,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 25,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 40,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
